2001-10-24  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk: create 4.0.3.

	* unposted: Completion/BSD/Command/.distfiles,
	Completion/UNIX/Command/.distfiles, Functions/Zle.distfiles,
	Test/.distfiles: usual fixes for missing distfiles entries.

	* 16135: Doc/.distfiles: pack up more of the .distfiles produced
	by texi2html, see 16130.

	* 16033: Pavel Roskin <proski@gnu.org>:
          Src/Builtins/rlimits.c: Undefine RLIMIT_RSS if it's equal to
        RLIMIT_VMEM to avoid duplicate case value.
          aczsh.m4 (zsh_LARGE_FILE_SUPPORT): Ignore output of getconf
        if it returns "undefined".

2001-10-24  Bart Schaefer  <schaefer@zsh.org>

	* Sven: 16041, Bart: 16038, 16124: Src/cond.c, Src/loop.c: for
	caching of compiled patterns: remember that singsub() might modify
	the string it gets, compare with unmodified string

2001-10-24  Peter Stephenson  <pws@csr.com>

	* 16130: Doc/.cvsignore, Doc/Makefile.in, Doc/Zsh/manual.yo:
	Fix for texi2html 1.64.

2001-10-22  Bart Schaefer  <schaefer@zsh.org>

	* 16111: Src/Builtins/rlimits.c: Report error on attempt to set
	limit to a string that is not a decimal number.

	* 16109: Src/init.c: Use a fixed initial fdtable_size to fix crash
	resulting from a huge memory allocation, as reported in 16082.

2001-10-20  Bart Schaefer  <schaefer@zsh.org>

	* Adapted from Stefan Dalibor, 16043: Src/utils.c: checkrmall()
	must not print to shout when shout's not valid.

2001-10-17  Clint Adams  <clint@zsh.org>

        * 16078: Completion/Unix/Command/_zip:
        add -r, change description for -R.

2001-10-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 16002: Completion/Unix/Type/_path_files: use expanded paths
	(expand style with value prefix) only when we are at the last
	matcher spec

	* 15991: Src/Zle/compcore.c: hide all but one match with the
	same string in the list even for unsorted groups

	* 15944: Completion/Unix/Type/_path_files, Doc/Zsh/compsys.yo: